# git_ga_benchmark

./: README.md  ai.py  eval.py  generate.py  models.py  pyproject.toml
dataset_from_dspy/: questions.json
dataset_from_dspy/questions_generated/: dspy.json
dataset_from_dspy/source_answers/: contributor_datetime_expertise.md  optimization_inference_speed.md  pattern_recognition_teleprompter_crash.md  system_adapter_logic.md  timeline_async_migration.md
tests/: eval_test_results.json  test_eval.py
tests/mock/: pattern_recognition_teleprompter_crash_excellent.txt  pattern_recognition_teleprompter_crash_fair.txt  pattern_recognition_teleprompter_crash_good.txt  pattern_recognition_teleprompter_crash_poor.txt
