[project]
name = "git-qa-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=2.6.27",
    "mlflow",
    "python-dotenv",
    "openai",
    "google-generativeai",
    "anthropic",
    "pydantic",
    "requests",
]
